# v-rag

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PRODUCT.md  README.md
backend/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  ruff.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260703_0001_graph_and_runs.py  20260703_0002_memory_tables.py
backend/app/: config.py  deps.py  graph_seed.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: chat.py  config.py  documents.py  graphs.py  health.py  memories.py  runs.py
backend/app/api/schemas/: chat.py
backend/app/core/db/: __init__.py  models.py  session.py
backend/app/core/document/: chunker.py  models.py  parser.py
backend/app/core/graph/: compiler.py  config.py  persistence.py  registry.py  runner.py  state.py
backend/app/core/memory/: __init__.py  bm25.py  consolidation.py  graph_adapter.py  reader.py  schemas.py  service.py  store.py  writer.py
backend/app/core/observability/: tracing.py
backend/tests/: test_health.py
backend/tests/integration/: test_chat.py  test_chat_complex_task.py  test_chat_routed.py  test_config_read.py  test_documents.py  test_documents_list.py  test_graphs_api.py  test_memories_api.py  test_memory_flow.py  test_rag_flow.py  test_runs_api.py
backend/tests/unit/: test_chat_chunks.py  test_config.py  test_db_models.py  test_db_session_migrations.py  test_document.py  test_graph_db_models.py  test_provider.py  test_retrieval.py  test_storage.py  test_tool_registry.py  test_tracing.py
(+104 files in other folders)
